--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 *.tfstate.*
 
 # .terraform directory (contains providers and modules)
-.terraform/*
+.terraform/
 **/.terraform/providers/**
 
 # Private keys or certificates (NEVER commit these!)
@@ -12,11 +12,11 @@
 *.cert
 
 # Terraform lock file (generally okay to commit, but can be ignored if you're not using a registry that requires it)
-.terraform-lock.hcl
+.terraform.lock.hcl
 
 # Files created by your IDE or other tools (adjust as needed)
-.idea/*
-.vscode/*
+.idea/
+.vscode/
 .DS_Store
 Thumbs.db
 
@@ -25,8 +25,3 @@ Thumbs.db
 *~
 *.swp
 *.log
-
-# Any other files or directories you don't want to track
-# Example:
-my-secret-config.txt  # A file containing sensitive info
-# logs/                # A directory containing log files
